<resources>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add Time Framed Lyrics</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_small_name">Small</string>
    <string name="app_widget_text_name">Minimal Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_fade_duration">Audio Fade Duration</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="backup_restore_title">
        <![CDATA[Backup & Restore]]>
    </string>
    <string name="backup_title">Backups</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_summary">An unexpected error occurred. Sorry you found this bug, if it keeps crashing \"Clear app data\" or send an Email </string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="buy_now">Buy now</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_square">Square Card</string>
    <string name="card_style">Card</string>
    <string name="carousal_effect_on_now_playing_screen">Carousel effect on the now playing screen</string>
    <string name="cascading">Cascading</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Check out What\'s New</string>
    <string name="circle">Circle</string>
    <string name="circular">Circular</string>
    <string name="classic">Classic</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playing_queue">Clear queue</string>
    <string name="color">Color</string>
    <string name="colors">Colors</string>
    <string name="composer">Composer</string>
    <string name="copied_device_info_to_clipboard">Copied device info to clipboard.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
    <string name="could_not_restore_purchase">Could not restore purchase.</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="create_action">Create</string>
    <string name="create_new_backup">Create</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="credit_title">Members and contributors </string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="dark_theme_name">Kinda Dark</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x">
        <![CDATA[Delete the playlist <b>%1$s</b>?]]>
    </string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_song_x">
        <![CDATA[Delete the song <b>%1$s</b>?]]>
    </string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_x_playlists">
        <![CDATA[Delete <b>%1$d</b> playlists?]]>
    </string>
    <string name="delete_x_songs">
        <![CDATA[Delete <b>%1$d</b> songs?]]>
    </string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="deleting_songs">Deleting Songs</string>
    <string name="depth">Depth</string>
    <string name="description">Description</string>
    <string name="device_info">Device info</string>
    <string name="dialog_message_set_ringtone">Allow Hamonie to modify audio settings</string>
    <string name="dialog_title_set_ringtone">Set ringtone</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist">
        <![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]>
    </string>
    <string name="donate">Donate</string>
    <string name="home">Home</string>
    <string name="library_categories">Library categories</string>
    <string name="permission_summary">The app needs permission to access your device storage for playing music</string>
    <string name="permission_title">Storage Access</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_lockscreen">Lockscreen</string>
    <string name="pref_summary_album_art_on_lockscreen">Use the currently playing song album cover as the lockscreen wallpaper</string>
    <string name="pref_summary_album_artists_only">Show Album Artists in the Artist category</string>
    <string name="pref_summary_blurred_album_art">Blur the album cover on the lockscreen. Can cause problems with third party apps and widgets</string>
    <string name="pref_summary_home_banner">Show or hide the home banner</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="pref_summary_lock_screen">Use Hamonie\'s custom lockscreen controls</string>
    <string name="pref_summary_remember_tab">Navigate to the last used tab on start</string>
    <string name="pref_summary_suggestions">Show New Music Mix on Homescreen</string>
    <string name="pref_summary_toggle_full_screen">Immersive mode</string>
    <string name="pref_title_album_art_on_lockscreen">Show album cover</string>
    <string name="pref_title_album_artists_only">Navigate by Album Artist</string>
    <string name="pref_title_blurred_album_art">Blur album cover</string>
    <string name="pref_title_home_album_grid_style">Album grid</string>
    <string name="pref_title_home_artist_grid_style">Artist grid</string>
    <string name="pref_title_home_banner">Banner</string>
    <string name="pref_title_lock_screen">Fullscreen controls</string>
    <string name="pref_title_remember_tab">Remember Last Tab</string>
    <string name="pref_title_suggestions">Show Suggestions</string>
    <string name="pref_title_tab_text_mode">Tab titles mode</string>
    <string name="pref_title_toggle_full_screen">Fullscreen app</string>
    <string name="ringtone_summary">The app needs permission to access your device settings in order to set music as Ringtone</string>
    <string name="ringtone_title">Ringtone (Optional)</string>
    <string name="window">Window</string>
</resources>