<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        app:title="@string/home">

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_home_grid_style_list_titles"
            android:entryValues="@array/pref_home_grid_style_list_values"
            android:key="home_artist_grid_style"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_home_artist_grid_style"
            app:icon="@drawable/ic_home" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="4"
            android:entries="@array/pref_home_grid_style_list_titles"
            android:entryValues="@array/pref_home_grid_style_list_values"
            android:key="home_album_grid_style"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_home_album_grid_style" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="toggle_home_banner"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_home_banner"
            android:title="@string/pref_title_home_banner" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="toggle_suggestions"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_suggestions"
            android:title="@string/pref_title_suggestions" />

    </com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_library">

        <com.hamonie.preferences.LibraryPreference
            android:key="library_categories"
            android:layout="@layout/list_item_view"
            android:summary="@string/pref_summary_library_categories"
            android:title="@string/library_categories"
            app:icon="@drawable/ic_library_music" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="remember_last_tab"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_remember_tab"
            android:title="@string/pref_title_remember_tab" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_tab_text_mode_titles"
            android:entryValues="@array/pref_tab_text_mode_values"
            android:key="tab_text_mode"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_tab_text_mode" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="album_artists_only"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_album_artists_only"
            android:title="@string/pref_title_album_artists_only" />
    </com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/window">

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="toggle_full_screen"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_toggle_full_screen"
            android:title="@string/pref_title_toggle_full_screen"
            app:icon="@drawable/ic_cellphone" />
    </com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_lockscreen">

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="album_art_on_lock_screen"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_album_art_on_lockscreen"
            android:title="@string/pref_title_album_art_on_lockscreen" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:dependency="album_art_on_lock_screen"
            android:key="blurred_album_art"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_blurred_album_art"
            android:title="@string/pref_title_blurred_album_art" />

        <com.hamonie.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="lock_screen"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_lock_screen"
            android:title="@string/pref_title_lock_screen" />
    </com.hamonie.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</androidx.preference.PreferenceScreen>