<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.hamonie.views.BaselineGridTextView
        android:id="@+id/appNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:text="@string/app_name"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextViewHeadline5"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:lineHeightHint="32sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?attr/dividerHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameText" />

    <com.hamonie.views.PermissionItem
        android:id="@+id/storagePermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:permissionButtonTitle="Grant access"
        app:permissionIcon="@drawable/ic_sd_storage"
        app:permissionTitle="@string/permission_title"
        app:permissionTitleNumber="1"
        app:permissionTitleSubTitle="@string/permission_summary" />

    <com.hamonie.views.PermissionItem
        android:id="@+id/audioPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storagePermission"
        app:permissionButtonTitle="Grant access"
        app:permissionIcon="@drawable/ic_phonelink_ring"
        app:permissionTitle="@string/ringtone_title"
        app:permissionTitleNumber="2"
        app:permissionTitleSubTitle="@string/ringtone_summary"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingVertical="12dp"
        android:text="Let's go"
        android:padding="22dp"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:translationZ="10dp"
        android:textAppearance="@style/TextViewButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>